# libnotify

./: .gitlab-ci.yml  .gitmodules  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README.md  SPECIFICATION  autogen.sh  config.h.meson  configure.ac  libnotify.doap  libnotify.pc.in  libnotify.spec.in  meson.build  meson_options.txt
docs/: ChangeLog  Makefile.am  config.xsl  meson.build  notification-spec-0.8.xml  notification-spec.ps  notification-spec.xml  notify-send.xml
docs/reference/: Makefile.am  libnotify-docs.sgml  libnotify-sections.txt  libnotify.toml.in  libnotify.types  meson.build  urlmap.js
docs/reference/tmpl/: .gitignore  libnotify-docs.sgml  libnotify-unused.sgml  notification.sgml  notify.sgml
docs/releases/: notification-spec-0.3.xml  notification-spec-0.4.xml  notification-spec-0.6.xml  notification-spec-0.7.xml  notification-spec-0.9.xml  notification-spec-1.0.xml
libnotify/: Makefile.am  Makefile.in  dbus-compat.h  internal.h  launch-context.c  launch-context.h  libnotify.map  meson.build  notification-hints.h  notification.c  notification.h  notify-features.h.in  notify-marshal.list  notify.c  notify.h  notifycommon.h  notifymarshal.c  notifymarshal.h  notifynotification.c  notifynotification.h  notifynotification.xml
tests/: Makefile.am  meson.build  notify-send.c  portal_template.py  test-action-icons.c  test-animation.c  test-basic.c  test-default-action.c  test-error.c  test-gir.py  test-gtk3.c  test-image.c  test-markup.c  test-multi-actions.c  test-persistence.c  test-removal.c  test-replace-widget.c  test-replace.c  test-resident.c  test-rtl.c  test-server-info.c  test-size-changes.c  test-transient.c  test-urgency.c  test-xy-actions.c  test-xy-stress.c  test-xy.c  test_notify_send.py
tools/: Makefile.am  meson.build  notify-send.c  test-replace.c
